--- a/Verifier/appsettings.json
+++ b/Verifier/appsettings.json
@@ -3,6 +3,7 @@
         "BaseDir": "Data\\5-ballots",
         "ContextFileName": "context",
         "ConstantsFileName": "constants",
+        "DescriptionFileName": "description",
         "CoefficientsFolderPath": "coefficients",
         "EncryptedBallotsFolderPath": "encrypted_ballots"
     },
