--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>ElectionGuard.Verifier.Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.9" />
+    <PackageReference Include="System.Linq.Async" Version="4.1.1" />
+  </ItemGroup>
+
 </Project>
