--- a/Verifier/appsettings.json
+++ b/Verifier/appsettings.json
@@ -5,7 +5,8 @@
         "ConstantsFileName": "constants",
         "DescriptionFileName": "description",
         "CoefficientsFolderPath": "coefficients",
-        "EncryptedBallotsFolderPath": "encrypted_ballots"
+        "EncryptedBallotsFolderPath": "encrypted_ballots",
+        "TallyFileName": "tally"
     },
     "Greeting": "Hello Moto"
 }
